fix: resolve syntax highlighting for camelCase identifiers
- Fix highlighting for camelCase non-terminals like <letDecls>, <seqExps>
- Update regex patterns to use \w* instead of [A-Z0-9]* for mixed-case support
- Update README documentation
- Add manual language selection instructions for edge cases
- Update CHANGELOG for version 0.0.4

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
       "id": "plcc",
       "aliases": ["PLCC Grammar", "plcc"],
       "extensions": [".grammar"],
-      "filenames": ["*grammar"],
+      "filenames": ["grammar"],
       "configuration": "./language-configuration.json"
     }],
     "grammars": [{
@@ -39,6 +39,15 @@
       "label": "PLCC Natural Theme",
       "uiTheme": "vs-dark",
       "path": "./themes/plcc-natural-theme.json"
-    }]
+    }],
+    "configurationDefaults": {
+      "[plcc]": {
+        "editor.tabSize": 2
+      },
+      "files.associations": {
+        "*grammar": "plcc",
+        "grammar": "plcc"
+      }
+    }
   }
 }
